--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     margin: 0 8px;
-    text-transform: uppercase;
 }
 
 
@@ -88,7 +87,6 @@
     font-weight: 600;
     padding: 11px 25px;
     display: inline-block;
-    text-transform: uppercase;
     border-radius: 5px;
 }
 
@@ -124,7 +122,6 @@
     color: #3B3E5C;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
-    text-transform: uppercase;
 }
 
 #about_part .about_text h2 span {
@@ -175,7 +172,6 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     text-align: center;
-    text-transform: uppercase;
 }
 
 #work_part .work_head h2 span {
@@ -230,7 +226,6 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     text-align: center;
-    text-transform: uppercase;
 }
 
 #gallery_part .gallery_head h2 span {
@@ -272,7 +267,6 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     text-align: center;
-    text-transform: uppercase;
 }
 
 #testimonial_part .testi_head h2 span {
@@ -338,7 +332,6 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     text-align: center;
-    text-transform: uppercase;
 }
 
 #blog_part .blog_head h2 span {
@@ -400,9 +393,9 @@
     background: url(../images/Group_33094_1.png);
     background-repeat: no-repeat;
     padding: 8% 10%;
-    margin: 50px 0;
+    margin: 50px 10%;
     height: 50px;
-    border-radius: 40px;
+    border-radius: 60px;
 }
 
 #sub_banner h4 {
@@ -429,62 +422,6 @@
 /* sub banner end */
 
 
-/* contact part start */
-
-#contact_part {
-    padding: 0 10%;
-}
-
-#contact_part .contact_head h2 {
-    font-size: 32px;
-    color: #3B3E5C;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    text-align: center;
-    text-transform: uppercase;
-    padding: 60px 0;
-}
-
-#contact_part .contact_head h2 span {
-    color: #fff;
-    background: #08D665;
-    padding: 0px 20px;
-    border-radius: 5px
-}
-
-.contact_inner input {
-    width: 45.95%;
-    height: 50px;
-    padding: 5px;
-    font-size: 16px;
-    margin: 0 15px 30px;
-}
-
-.contact_inner .msg {
-    width: 96%;
-    height: 200px;
-    padding: 0 5px;
-    /* margin: 10px 0; */
-}
-
-.contact_inner a {
-    font-size: 16px;
-    color: #fff;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    text-decoration: none;
-    padding: 15px 0px;
-    background: linear-gradient(orange, tomato);
-    border-radius: 100px;
-    display: block;
-    text-align: center;
-    margin-bottom: 80px;
-}
-
-
-/* contact part end */
-
-
 /* footer part start  */
 
 footer {
@@ -492,11 +429,16 @@ footer {
     text-align: center;
 }
 
+.footer_head {
+    padding-bottom: 30px;
+}
+
 .footer_head h4 {
     font-size: 16px;
     color: #333333bf;
     font-family: "Poppins", sans-serirf;
     font-weight: 500;
+    margin-top: 50px;
 }
 
 .footer_head h3 {
